Changes to About me section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0">Software Developer & Integrator - Ethical Hacker - Problem Solver</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -134,14 +134,20 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Hello, I'm Atanas Chelibashki, a passionate software developer currently making strides in the dynamic world of the energy business. I'm currently working as a Software Engineering Intern at GE Vernova, where I'm actively contributing to building the green future of energy. In this role, I collaborate closely with Distribution Network Operators (DNOs) to ensure the seamless integration of cutting-edge technologies that will power the sustainable energy landscape of tomorrow.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">My journey in the software development field has been marked by a genuine enthusiasm for innovation and continuous learning. As a software developer, I am driven by the relentless pursuit of excellence in my craft. I believe in the power of code to shape the world for the better, and I'm committed to playing my part in this transformative journey.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">One of my core passions lies in the realm of cybersecurity. I am an aspiring Cyber Security professional with a strong interest in penetration testing and ethical hacking. The ever-evolving landscape of digital threats presents an exhilarating challenge that fuels my dedication to fortify the digital world against vulnerabilities.
+</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">In addition to my love for cybersecurity, I am deeply invested in the world of DevOps practices. Continuous Integration/Continuous Deployment (CI/CD). pipeline automation and Infrastructure as Code are areas where I strive for excellence. These practices enable me to streamline workflows, enhance efficiency, and ensure that every piece of code I touch is delivered with the utmost reliability and scalability.
+</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Thank you for visiting my portfolio, and I hope you enjoy exploring the projects and experiences that have shaped my career. If you'd like to connect, collaborate, or simply discuss the exciting possibilities of software development, I'm just a message away.
+</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
                         <i class="fas fa-download me-2"></i>
-                        Free Download!
+                        Download my CV!
                     </a>
                 </div>
             </div>
